assets/css/main.css
:root {
  --color-primary: #2341c1;
  --color-secondary-text: #ffffff;
}

html {
  font-size: 20px;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  min-width: 300px;
  text-rendering: optimizeSpeed;
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  margin: 0.5rem 0 1.5rem 0;
  min-height: 100%;
}

.container {
  max-width: 35rem;
  margin: 0.5rem auto;
  position: relative;
  padding: 0 1rem 0.5rem 1rem;
  border-radius: 0.25rem;
  -webkit-box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
}

.section {
  padding: 1rem;
  margin: 1rem 0 0 0;
  border-radius: 0.25rem;
  -webkit-box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  border-top: 0.5rem solid var(--color-primary);
}

a {
  /* border-bottom: 2px solid #2341c1; */
  color: #212121;
  text-decoration: underline;
  -webkit-text-decoration-color: #2341c1;
  text-decoration-color: #2341c1;
}

/* Sticky footer */
html {
  height: 100%;
}

body {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}
main {
  -webkit-box-flex: 1;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}
footer {
  -ms-flex-negative: 0;
  flex-shrink: 0;
}
/* End sticky footer */

.e-content > * + *,
footer > * + *,
header > * + * main > * + *,
main *,
li,
nav {
  margin-top: 1rem;
}

nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}

.nav_list {
  display: none;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

#nav_toggler {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: var(--color-primary);
  color: var(--color-secondary-text);
  border: none;
  padding: 0.25rem 0;
  margin: 0 4rem;
}

.mobileShown {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width: 650px) {
  .nav_list {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
  }

  #nav_toggler {
    display: none;
  }
}

footer > nav {
  margin-top: 0;
}

.footer_nav_item:first-child {
  margin-top: 0;
}
.word-wrap-break-word,
.footnote-item a {
  overflow-wrap: break-word;
  word-wrap: break-word;
  -ms-word-break: break-all;
  word-break: break-all;
  word-break: break-word;
}

.footnote-item {
  list-style: decimal;
  margin-left: 1rem;
}

button {
  cursor: pointer;
}

pre {
  padding: 1rem 0.5rem;
  -webkit-box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  overflow: auto;
}

.hidden {
  display: none;
}

.visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: auto;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

.footer_link {
  display: block;
  margin-top: 0.5rem;
}

.no_text_decoration {
  text-decoration: none;
}

.no_list_style {
  list-style-type: none;
}

.nav_item {
  display: inline;
}

.site_title {
  line-height: 1;
  text-align: center;
}

.post_title {
  line-height: 1.2;
}

.section > h2,
.section > .post_date {
  margin-top: 0;
}

a {
  color: var(--color-primary);
  -webkit-text-decoration-color: var(--color-primary);
  text-decoration-color: var(--color-primary);
}

